--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "recharts": "^3.0.2",
     "sweetalert2": "^11.21.2"
   },
   "devDependencies": {
